<resources>
    <string name="app_name">Savac4k</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Sing Up</string>

    <string name="welcome">Welcome!</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Don\'t have account? Sign Up </string>
    <string name="na">Name</string>
    <string name="register">Formulary</string>
    <string name="confirm">Create Account</string>
    <string name="main">Index</string>

    <string-array name="pick">
        <item>Ingles</item>
        <item>Español</item>
    </string-array>

    <string name="picke">Seleccione un Idioma</string>

    <string name="desc_list_item_icon">Item Icons</string>

    <string-array name="name_drawer_items">
        <item>Home</item>
        <item>Learn</item>
        <item>Test</item>
        <item>Graphics</item>
        <item>Admin</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_menu_home</item>
        <item>@drawable/ic_menu_study</item>
        <item>@drawable/ic_menu_test</item>
        <item>@drawable/ic_menu_graphic</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activity__learn">Learn</string>
    <string name="choose">Choose a Subjects </string>
    <string name="title_activity_c_basico">Basic</string>

    <string name="title_activity_c_numbers">Number</string>
    <string name="title_activity_c_animales">Animals</string>
    <string name="title_activity_c_object">Objects</string>
    <string name="title_activity_c_country">Country</string>
    <string name="title_activity_c_gesture">Gesture</string>
    <string name="title_activity_c_actions">Actions</string>
    <string name="title_activity_prueba_library">pruebaLibrary</string>

    <string name="complete">Completed</string>
    <string name="error">Error!</string>
    <string name="upload">Upload</string>
    <string name="title_activity_prueba">pruebaActivity</string>
    <string name="title_activity_base_prueba">BasePrueba</string>
    <string name="title_activity_prueba_picasso">PruebaPicasso</string>
    <string name="title_activity_loopjprueba">LOOPJprueba</string>
    <string name="title_activity_volley_prueba">VolleyPrueba</string>

</resources>
